--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "knex": "./node_modules/.bin/knex"
   },
   "author": "Karl Jensen",
   "license": "MIT",
@@ -15,7 +16,9 @@
     "ejs": "^2.5.5",
     "express": "^4.14.1",
     "pg": "^6.1.2",
-    "shortid": "^2.2.6",
-    "uniqueid": "^1.0.0"
+    "shortid": "^2.2.6"
+  },
+  "devDependencies": {
+    "dotenv": "^4.0.0"
   }
 }
